@@ -253,6 +253,10 @@
   (export (mapcar (lambda (symbol-name) (intern symbol-name package))
                   exports)
           package)
+  ;; 5. :local-nicknames
+  (setf (package-%local-nicknames package) nil) ; throw out the old ones.
+  (loop :for (nickname . nickname-package) :in local-nicknames :do
+     (add-package-local-nickname nickname nickname-package package))
   ;; Everything was created: update metadata
   (when source-location
     (setf (package-source-location package) source-location))
@@ -264,10 +268,6 @@
       (add-implementation-package package p))
     ;; Handle lock
     (setf (package-lock package) lock))
-  ;; Local nicknames. Throw out the old ones.
-  (setf (package-%local-nicknames package) nil)
-  (dolist (spec local-nicknames)
-    (add-package-local-nickname (car spec) (cdr spec) package))
   package)
 
 (declaim (type list *on-package-variance*))
