@@ -1,5 +1,9 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-1.3.8:
+  * bug fix: using the options :LOCAL-NICKNAMES and :LOCK in the same
+    DEFPACKAGE form no longer signals a bogus error
+
 changes in sbcl-1.3.8 relative to sbcl-1.3.7:
   * minor incompatible change: the system now understands that the CONDITION
     type is disjoint with many other system types.
